FINERACT-846: Migrating to Java 11, upgrading dependencies, fixing compiler warnings